--- a/oferty.css
+++ b/oferty.css
@@ -20,56 +20,14 @@
         opacity: 0.15;
         position: fixed;
     }
-    .header {
-        background-color: rgba(0, 0, 128, 0.676);
-        width: 100%;
-        height: 80px;
-        padding: 10px;
-    }
-    img {
-        width: auto;
-        position: absolute;  
-        margin: -20px 0px; 
-        height: 90px;
-        float: left;
-    }
-    .header-menu{
-        float: right;
-        margin: 23px -10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    ul{
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        text-align: center;
-        overflow: hidden;
-
-    }
-    li{
-        float: left;
-    }
-    .header-menu a:hover {
-        background-color: rgba(0, 0, 128, 0.918);
-        transition: background-color 2s;   
-    }
-    .header-menu a {
-        text-decoration: none;
-        font-weight: 600;
-        padding: 14px 16px; 
-        color: white;
-        min-width: 13vw;
-        margin: 0px 40px; 
-        display: block; 
-        width: fit-content;
-    }
     button.icon{
         visibility: hidden;
     }
     .tekst {
         text-align: center;
+    }
+    a{
+        text-decoration: none;
     }
     .oferta{
         background-image: url('assets/egipt.jpg');
@@ -95,6 +53,11 @@
         max-width: 1440px;
         padding: 0px 20px;
     }
+    .container a:hover {
+        background-color: rgba(230, 186, 12, 0.708);
+        transition: background-color 2s; 
+        border-radius: 5px;  
+    }
     #o1{
         background-image: url('assets/egipt.jpg');
     }      
@@ -107,7 +70,7 @@
     #o4{
         background-image: url('assets/seszele.jpg');
     }     
-    .tekst a {
+    .tekst h2 {
         color: white;
         font-size: 30px;
         font-weight: 600;
@@ -212,19 +175,18 @@
             margin: 0px 0px;
             padding: 8px;
         }
+        .oferta{
+            padding: 0;
+        }
         .header {
             padding: 10px;
-        }
-        img{
-            height: 90px;
-            width: auto;
-            margin: -20px 0px;
         }
         .container{
             grid-template-columns: 100%;
             display: block;
+            padding: 0px 10px;
         } 
-        .tekst a{
+        .tekst h2{
             padding: 1px;     
             font-size: 18px;   
             display: flex;    
