--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,3 @@
-body {
-font-family: 'Arial';
-background-color: lightskyblue;
-margin: 0;
-padding: 0; 
-}  
-*{box-sizing: border-box;}
-body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size: cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.15;
-    position: fixed;
-}
 .wakacje {
     display: flex;
     padding: 100px;
@@ -40,16 +20,16 @@ h4{
     margin: 0;
 }
 #w1 {
-    background-image: url('assets/morze.jpg');
+    background-image: url('../assets/morze.jpg');
 }
 #w2 {
-    background-image: url('assets/morze2.jpg');
+    background-image: url('../assets/morze2.jpg');
 }
 #w3 {
-    background-image: url('assets/x.jpg');
+    background-image: url('../assets/x.jpg');
 }
 #w4{
-    background-image: url('assets/main4.jpeg');
+    background-image: url('../assets/main4.jpeg');
 }
 .container{
     gap: 30px;
@@ -129,22 +109,8 @@ p{
         font-size: 17px;
         display: block;
     }
-    .header-icon{
-        height: initial;
-        width: 26px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        object-fit: cover;
-        width: 100%;
-    }
     .topnav button.icon {
-        background-image: url('assets/hamburger.png'); 
-        width: 100%;
-        height: 100%;
+        background-image: url('../assets/hamburger.png'); 
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
