--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -1,23 +1,3 @@
-body{
-    font-family: 'Arial';
-    background-color: lightskyblue;
-    margin: 0;
-    padding: 0; 
-    }
-    *{box-sizing: border-box;}
-    body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size: cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.15;
-    position: fixed;
-    } 
     button.icon{
         visibility: hidden;
     }
@@ -49,12 +29,12 @@ body{
         font: inherit;
     }
     input{
-            width: 100%;
-            margin: 10px 0px;       
-            border-radius: 5px;
-            border: 2px solid rgba(0, 0, 0, 0.315);
-            box-sizing: border-box;
-            padding: 10px;
+        width: 100%;
+        margin: 10px 0px;       
+        border-radius: 5px;
+        border: 2px solid rgba(0, 0, 0, 0.315);
+        box-sizing: border-box;
+        padding: 10px;
     }
     select{
         width: 100%;
@@ -83,9 +63,7 @@ body{
     .footer{
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
-        height: 30px;
         width: 100%;
-        padding: 15px;
         margin: auto 0 0 0;
         position: absolute;
         bottom: 0;
@@ -94,9 +72,7 @@ body{
     }
     p{
         color: white;
-        margin: -13px 0px;
         font-size: 12px;
-        padding: 8px;
     }  
     @media only screen and (max-width: 620px){  
     li{
@@ -137,22 +113,8 @@ body{
         font-size: 17px;
         display: block;
     }
-    .header-icon{
-        height: initial;
-        width: 26px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        object-fit: cover;
-        width: 100%;
-    }
     .topnav button.icon {
-        background-image: url('assets/hamburger.png'); 
-        width: 100%;
-        height: 100%;
+        background-image: url('../assets/hamburger.png'); 
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -175,7 +137,13 @@ body{
   }  
     @media only screen and (max-width: 991px){
         form{
-            width: 300px;
+            max-width: 350px;
+            width: 100%;
+        }
+        .container{
+            max-width: 1200px;
+            padding: 0px 20px;
+            margin: 0 auto;
         }
         img{
             height: 90px;
