--- a/css/logowanie.css
+++ b/css/logowanie.css
@@ -1,66 +1,51 @@
-body{
-    font-family: 'Arial';
-    background-color: lightskyblue;
-    margin: 0;
-    padding: 0; 
-    height: 100vh;
-    }
-    *{box-sizing: border-box;}
-    body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size: cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.15;
-    position: fixed;
-    }
+
     button.icon{
         visibility: hidden;
     }
-    .container{ 
+    form{
         background-color: rgba(0, 0, 128, 0.377); 
-        max-width: 600px;
-        max-height: 800px;
         padding: 15px;  
+        width: 500px;
         color: rgb(228, 185, 12);
         border-radius: 8px;
-        margin: 15px auto 80px auto;
+        margin: 50px auto 80px auto;
     }
     label{	   
 	    display: flex;	
 	    padding: 10px 0px;
-	}    
+	} 
+    .container a{
+        text-decoration: none;
+        color: rgb(228, 185, 12);
+        font-weight: 700;
+        display: flex;
+        padding: 7px;
+
+    }    
     .button {
         background-color: rgba(0, 0, 128, 0.514);		
-        margin:20px 0px;
-	    padding:4px 7px;	
+        margin:10px 0px;
         font-weight: 600;
+	    padding:7px 0px;	
 	    border:1px;
-	    width:100px;
+	    width:150px;
         color: rgb(228, 185, 12);
 	}
+    input{
+        width: 100%;
+        margin: 10px 0px;       
+        border-radius: 5px;
+        border: 2px solid rgba(0, 0, 0, 0.315);
+        box-sizing: border-box;
+        padding: 10px;
+    }
     h2{
         text-align: center;
-    }
-    input{
-            width: 100%;
-            margin: 10px 0px;       
-            border-radius: 5px;
-            border: 2px solid rgba(0, 0, 0, 0.315);
-            box-sizing: border-box;
-            padding: 10px;
     }
     .footer{
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
-        height: 30px;
         width: 100%;
-        padding: 15px;
         margin: auto 0 0 0;
         position: absolute;
         bottom: 0;
@@ -69,11 +54,9 @@ body{
     }
     p{
         color: white;
-        margin: -13px 0px;
         font-size: 12px;
-        padding: 8px;
     }  
-@media only screen and (max-width: 620px){  
+    @media only screen and (max-width: 620px){  
     li{
         flex-direction: column;
         float: none;
@@ -112,22 +95,8 @@ body{
         font-size: 17px;
         display: block;
     }
-    .header-icon{
-        height: initial;
-        width: 26px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        object-fit: cover;
-        width: 100%;
-    }
     .topnav button.icon {
-        background-image: url('assets/hamburger.png'); 
-        width: 100%;
-        height: 100%;
+        background-image: url('../assets/hamburger.png'); 
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -148,22 +117,24 @@ body{
         background-color: lightskyblue;
     }    
   }  
+    @media only screen and (max-width: 991px){ 
+        img{
+            height: 90px;
+            width: auto;
+            margin: -20px 0px;
+        }
+        form{
+            max-width: 400px;
+            width: 100%;
+        }
+        .container{
+            max-width: 1200px;
+            padding: 0px 20px;
+            margin: 0 auto;
+        }
+        .button{
+            width: 70px;
+            height: 45px;
+        }
 
-    @media only screen and (max-width: 991px){
-    img{
-        height: 90px;
-        width: auto;
-        margin: -20px 0px;
-     }
-    .container{
-        width: 300px;
-        height: 250px; 
-    }
-    .button{
-        width: 70px;
-        height: 45px;
-    }
-    .f{
-        padding-top: 50px;
-    }
 }
