--- a/css/oferty.css
+++ b/css/oferty.css
@@ -1,25 +1,4 @@
-    body {
-        font-family: 'Arial';  
-        background-color: lightskyblue; 
-        margin: 0;
-        padding: 0; 
-    }
-    *{
-        box-sizing: border-box;
-    }
-    body::before{
-        content: ' ';
-        display: block;
-        background-image: url('assets/5.jpg');
-        background-size:cover ;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        opacity: 0.15;
-        position: fixed;
-    }
+    
     button.icon{
         visibility: hidden;
     }
@@ -30,7 +9,7 @@
         text-decoration: none;
     }
     .oferta{
-        background-image: url('assets/egipt.jpg');
+        background-image: url('../assets/egipt.jpg');
         display: flex;
         padding: 100px;
         background-repeat: no-repeat;
@@ -42,6 +21,7 @@
         margin: 20px 0px;  
         height: 200px;
         justify-content: center;
+        box-shadow: 6px 6px 10px black;
             
     }
     .container{
@@ -55,20 +35,21 @@
     }
     .container a:hover {
         background-color: rgba(230, 186, 12, 0.708);
-        transition: background-color 2s; 
+        box-shadow: 5px 5px 10px 8px rgba(230, 186, 12, 0.568);
+        transition: background-color 1s; 
         border-radius: 5px;  
     }
     #o1{
-        background-image: url('assets/egipt.jpg');
+        background-image: url('../assets/egipt.jpg');
     }      
     #o2{
-        background-image: url('assets/albania.jpg');
+        background-image: url('../assets/albania.jpg');
     }      
     #o3{
-        background-image: url('assets/grecja.jpg');
+        background-image: url('../assets/grecja.jpg');
     }       
     #o4{
-        background-image: url('assets/seszele.jpg');
+        background-image: url('../assets/seszele.jpg');
     }     
     .tekst h2 {
         color: white;
@@ -133,22 +114,8 @@
             font-size: 17px;
             display: block;
         }
-        .header-icon{
-            height: initial;
-            width: 26px;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 1;
-            object-fit: cover;
-            width: 100%;
-        }
         .topnav button.icon {
-            background-image: url('assets/hamburger.png'); 
-            width: 100%;
-            height: 100%;
+            background-image: url('../assets/hamburger.png'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -184,7 +151,7 @@
         .container{
             grid-template-columns: 100%;
             display: block;
-            padding: 0px 10px;
+            padding: 0px 16px;
         } 
         .tekst h2{
             padding: 1px;     
