--- a/css/opisy.css
+++ b/css/opisy.css
@@ -1,23 +1,4 @@
-body {
-    font-family: 'Arial';
-    background-color: lightskyblue;
-    margin: 0;
-    padding: 0; 
-    }  
-    *{box-sizing: border-box;}
-    body::before{
-        content: ' ';
-        display: block;
-        background-image: url('assets/5.jpg');
-        background-size: cover ;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        opacity: 0.15;
-        position: fixed;
-    }
+
     button.icon{
         visibility: hidden;
     }
@@ -39,6 +20,9 @@ body {
         max-width: 500px;
         width: 60%;
     } 
+    ul{
+        padding-left: 10px;
+    }
     h2{
         margin-top: 0;
         margin-bottom: 20px;
@@ -79,28 +63,24 @@ body {
     }
     .navigation{
         margin-bottom: 20px;
+        width: 100%;
+    }
+    iframe{
+        max-width: 500px;
     }
     .footer{
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
-        height: 30px;
         width: 100%;
-        padding: 15px;
+        position: absolute;
         margin: auto 0 0 0;
     }
     p{
         color: white;
-        margin: -13px 0px;
         font-size: 12px;
-        padding: 8px;
     }
 
     @media only screen and (max-width: 620px){  
-        .main-text{
-            margin-top: 20px;
-            max-width: 400px;
-            width: 100%;
-        }
         .main2-button{
             margin-top: 30px;
         }
@@ -143,22 +123,8 @@ body {
             font-size: 17px;
             display: block;
         }
-        .header-icon{
-            height: initial;
-            width: 26px;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 1;
-            object-fit: cover;
-            width: 100%;
-        }
         .topnav button.icon {
-            background-image: url('assets/hamburger.png'); 
-            width: 100%;
-            height: 100%;
+            background-image: url('../assets/hamburger.png'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -180,9 +146,14 @@ body {
         }    
       }  
 @media only screen and (max-width: 991px){
+    .main-text{
+        margin-top: 30px;
+        max-width: 450px;
+        width: 100%;
+    }
     .container{
         display: block;
-        padding: 0px 10px;
+        padding: 0px 16px;
     }
     .main{
         align-items: center;
@@ -209,7 +180,8 @@ body {
         margin-bottom: 20px;
     }
     .navigation{
-        overflow: auto;
+        overflow: hidden;
+        max-height: 350px;
         width: 100%;
     } 
     }
