--- a/css/rejestracja.css
+++ b/css/rejestracja.css
@@ -1,24 +1,4 @@
-body{
-    font-family: 'Arial';
-    background-color: lightskyblue;
-    margin: 0;
-    padding: 0; 
-    height: 100vh;
-    }
-    *{box-sizing: border-box;}
-    body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size: cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.15;
-    position: fixed;
-    }
+
     button.icon{
         visibility: hidden;
     }
@@ -48,19 +28,17 @@ body{
         text-align: center;
     }
     input{
-            width: 100%;
-            margin: 10px 0px;       
-            border-radius: 5px;
-            border: 2px solid rgba(0, 0, 0, 0.315);
-            box-sizing: border-box;
-            padding: 10px;
+        width: 100%;
+        margin: 10px 0px;       
+        border-radius: 5px;
+        border: 2px solid rgba(0, 0, 0, 0.315);
+        box-sizing: border-box;
+        padding: 10px;
     }
     .footer{
         background-color: rgba(0, 0, 128, 0.676);
         text-align: center;
-        height: 30px;
         width: 100%;
-        padding: 15px;
         margin: auto 0 0 0;
         position: absolute;
         bottom: 0;
@@ -69,9 +47,7 @@ body{
     }
     p{
         color: white;
-        margin: -13px 0px;
         font-size: 12px;
-        padding: 8px;
     }  
     @media only screen and (max-width: 620px){  
         li{
@@ -112,22 +88,8 @@ body{
         font-size: 17px;
         display: block;
     }
-    .header-icon{
-        height: initial;
-        width: 26px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        object-fit: cover;
-        width: 100%;
-    }
     .topnav button.icon {
-        background-image: url('assets/hamburger.png'); 
-        width: 100%;
-        height: 100%;
+        background-image: url('../assets/hamburger.png'); 
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
